--- a/HobartEats/HobartEats/appsettings.json
+++ b/HobartEats/HobartEats/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=App_Data/hobart-eats.db"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
